# net-discover

./: .env.example  .gitignore  Dockerfile  FEATURES.md  IMPACT_ANALYSIS.md  NOTICE  README.md  TRACEABILITY_MATRIX.md  docker-compose.yml  requirements.txt
marlinspike/: aggregate.py  app.py  audit.py  auth.py  config.py  engine.py  iocs.py  models.py  recovery.py  run_store.py
marlinspike-agent/: README.md  pyproject.toml
marlinspike-agent/agent/: __init__.py  capd_client.py  certs.py  cli.py  client.py  consumer.py  credential_store.py
marlinspike-agent/systemd/: marlinspike-agent.service
scripts/: gen_dev_tls_cert.sh  import_pcap.py
tests/: test_aggregate_asset_dedup.py  test_alembic_migrations.py  test_audit_failure_visibility.py  test_beacon_benign_ntp_dns.py  test_capabilities_catalog.py  test_chunk_size_rust_dpi.py  test_chunked_malware_stage.py  test_csp_inline_attrs.py  test_dns_exfil_short_labels.py  test_emit_format_fixes.py  test_expensive_endpoint_rate_limit.py  test_finalize_clears_pid.py  test_finalize_enrichment_degraded.py  test_inmemory_db_warning.py  test_iocs_wildcard_domain.py  test_ip_in_subnet.py  test_max_content_length.py  test_mitre_severity_filter.py  test_oui_db_load.py  test_preset_path_traversal.py  test_project_delete_cleanup.py  test_recovery.py  test_recovery_enrichment.py  test_recovery_finalize_race.py  test_recovery_multiworker.py  test_recovery_pid_reuse.py  test_recovery_timeout_liveness.py  test_reports_shared_access.py  test_reset_token_delivery.py  test_run_ownership.py  test_scan_concurrency_toctou.py  test_sigma_emit.py  (+5 more)
(+30 files in other folders)
